Fix overlapping menu

--- a/components/header/index.css
+++ b/components/header/index.css
@@ -127,7 +127,7 @@
   list-style: none;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1300px) {
   .Header-list {
     transform-origin: center right;
     transform: scale(calc(1.2 - (0.2 * (1 - var(--Header-size, 1)))));
